--- a/style.css
+++ b/style.css
@@ -108,382 +108,389 @@ body {
     transform: scale(1.1);
 }
 
-    .category-screen .head-wrapper {
-        display: flex;
-        width: 90%;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .category-screen .head-wrapper .options {
-        font-size: 40px;
-        padding: 8px;
-        border-radius: .4rem;
-    }
-
-    .category-screen .head-wrapper .options:hover {
-        background-color: #34a797;
-        color: #fff;
-    }
-
-    .back-btn {
-        font-size: 50px;
-        color: rgb(252, 232, 7);
-        transition: .5s;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-    }
-
-    .category-screen .head-wrapper .back-btn:hover {
-        border-radius: 2rem;
-        background-color: #fff;
-        color: black;
-        padding: 5px 20px;
-    }
-
-    .category-details {
-        display: flex;
-        align-items: center;
-        padding: 0 30px;
-        gap: 1rem;
-    }
-
-    .category-details img {
-        width: 4rem;
-        border-radius: 50px;
-    }
-
-
-
-    .welcome {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 2rem;
-        padding: 20px;
-    }
-
-    .welcome h1 {
-        font-size: 1.5rem;
-        color: rgb(51, 47, 47);
-
-    }
-
-    .welcome p {
-        color: rgb(72, 66, 66);
-        margin-top: 20px;
-        font-weight: 500;
-    }
-
-    .welcome .img {
-        position: relative;
-    }
-
-    .welcome .img img {
-        width: 5rem;
-        border-radius: 50%;
-    }
-
-    .categories-wrapper {
-        height: calc(100% - 8rem);
-        padding: 0 30px;
-        padding-bottom: 20px;
-        overflow: auto;
-
-    }
-
-    .categories {
-        display: flex;
-        flex-direction: column;
-        padding-top: 1rem;
-        gap: 1rem;
-    }
-
-    .categories .category {
-        display: flex;
-        justify-content: space-between;                        
-        padding: 1.5rem 1rem;
-        background-color: #fff;
-        border-radius: .5rem;
-        box-shadow: 0 10px 20px 5px #00000023;
-        transition: all .5s;
-        cursor: pointer;
-    }
-
-    .categories .category:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 20px 5px #00000040;
-
-    }
-
-    .category .left {
-        display: flex;
-        align-items: center;
-        gap: 1.5rem;
-    }
-
-    .category .left img {
-        width: 3rem;
-        border-radius: 20px;
-    }
-    
-     .category .content h2 {
-        font-weight: 500;
-        font-size: 32px;
-    }
-
-    .category .content p {
-        color: rgb(61, 59, 59);
-        font-size: .8rem;
-        opacity: 0.6;
-    }
-
-    .category .options {
-     opacity:  o;
-     visibility: hidden;
-    }
-
-    .category:hover .options {
-        opacity: 1;
-        visibility: visible;
-    }
-
-    .category .toggle-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        width: 2rem;
-        font-size: 1.8rem;
-        color: #2c2b2b;
-    }
-
-    /* ===TASKS==== */
-    .tasks-wrapper {
-        padding: 0 30px;
-        margin-top: 1rem;
-        height: calc(100%);
-        padding-bottom: 20px;
-        overflow: auto;
-
-    }
-
-    .tasks {
-        display: flex;
-        flex-direction: column;
-        padding-top: 1rem;
-        gap: 1rem;
-
-    }
-
-    .task-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 15px 20px;
-        margin-top: 1rem;
-        height: calc(100%) -12rem;
-        padding-bottom: 20px;
-        overflow: auto;
-        border-radius: 10px;
-    }
-
-    .task-wrapper:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 20px 5px #00000040;
-    }
-
-    .task {
-        display: flex;
-        align-items: center;
-        font-size: .8rem;
-        font-weight: 500;
-        gap: .5rem;
-        width: max-content;
-        cursor: pointer;
-
-    }
-
-    .task input {
-        display: none;
-    }
-
-    .task .checkmark {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 1rem;
-        height: 1rem;
-        border-radius: 2px;
-        border: 1px solid gray;
-    }
-
-    .checkmark i {
-        width: 1rem;
-        opacity: 0;
-        transition: all 0.3s;
-
-    }
-
-    .task:hover .checkmark i {
-        opacity: 1;
-    }
-
-
-    .task input:checked~.checkmark {
-        background-color: #2c2b2b;
-    }
-
-    .task input:checked~.checkmark i {
-        opacity: 1;
-        color: #fff;
-    }
-
-    .task input:checked~p {
-        text-decoration: line-through;
-        opacity: 0.6;
-    }
-
-    .task-wrapper .delete i {
-        font-size: 1.5rem;
-    }
-
-    .task-wrapper .delete {
-        padding: 10px;
-        border-radius: 10px;
-        cursor: pointer;
-        opacity: 0;
-        visibility: hidden;
-        transition: all 0.3s;
-    }
-
-
-    .task-wrapper:hover .delete {
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .task-wrapper .delete:hover {
-        color: red;
-    }
-
-    .add-task-btn {
-        padding: .2rem .5rem;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        background-color: aquamarine;
-        font-size: 50px;
-        border-radius: 50%;
-        bottom: 1rem;
-        right: 1rem;
-        transition: all 0.3s;
-    }
-
-    .add-task-btn.active {
-        z-index: 1;
-        bottom: 20rem;
-        transform: rotate(45deg);
-    }
-
-    .add-task-btn:hover {
-        background-color: #34a797;
-        color: #fff;
-        transform: scale(1.1);
-
-    }
-
-    .add-task {
-        position: absolute;
-        bottom: -100%;
-        left: 0;
-        width: 100%;
-        padding: 20px 30px;
-        transition: all 0.3s;
-    }
-
-    .add-task.active {
-        bottom: 0;
-    }
-
-    .add-task .heading {
-        font-size: 1.5rem;
-        margin-bottom: 1rem;
-    }
-
-    .input-group {
-        position: relative;
-        margin-bottom: 1rem;
-    }
-
-    .input-group input,
-    .input-group label {
-        width: 100%;
-        display: block;
-    }
-
-    .input-group input,
-    .input-group select {
-        width: 100%;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        padding: 12px;
-    }
-
-    .input-group label {
-        width: max-content;
-        padding: 10px 0px;
-        margin-bottom: 5px;
-    }
-
-    .btns {
-        display: flex;
-        gap: 1rem;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .btns button {
-        padding: 10px 20px;
-        border-radius: 10px;
-        border: none;
-        outline: none;
-        font-weight: 500;
-        cursor: pointer;
-        transition: all 0.3s;
-    }
-
-    .btns button.add-btn {
-        background-color: aquamarine;
-        color: #000;
-    }
-
-    .add-task-backdrop {
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        width: 135%;
-        height: 20rem;
-        border-radius: 50% 50% 0 0;
-        transform: translate(-50%);
-        background-color: #fff;
-        border: 1px solid;
-    }
-
-    .black-backdrop {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        backdrop-filter: blur(5px);
-        background-color: #00000023;
-        opacity: 0;
-        visibility: hidden;
-        transition: all 0.3s;
-    }
-
-    .black-backdrop.active {
-        opacity: 1;
-        visibility: visible;
-    }
+.category-screen .head-wrapper {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.category-screen .head-wrapper .options {
+    font-size: 40px;
+    padding: 8px;
+    border-radius: .4rem;
+}
+
+.category-screen .head-wrapper .options:hover {
+    background-color: #34a797;
+    color: #fff;
+}
+
+.back-btn {
+    font-size: 50px;
+    color: rgb(252, 232, 7);
+    transition: .5s;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.category-screen .head-wrapper .back-btn:hover {
+    border-radius: 2rem;
+    background-color: #fff;
+    color: black;
+    padding: 5px 20px;
+}
+
+.category-details {
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+    gap: 1rem;
+}
+
+.category-details img {
+    width: 4rem;
+    border-radius: 50px;
+}
+
+
+
+.welcome {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+    padding: 20px;
+}
+
+.welcome h1 {
+    font-size: 1.5rem;
+    color: rgb(51, 47, 47);
+
+}
+
+.welcome p {
+    color: rgb(72, 66, 66);
+    margin-top: 20px;
+    font-weight: 500;
+}
+
+.welcome .img {
+    position: relative;
+}
+
+.welcome .img img {
+    width: 5rem;
+    border-radius: 50%;
+}
+
+.categories-wrapper {
+    height: calc(100% - 8rem);
+    padding: 0 30px;
+    padding-bottom: 20px;
+    overflow: auto;
+
+}
+
+.categories {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    gap: 1rem;
+}
+
+.categories .category {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 1rem;
+    background-color: #fff;
+    border-radius: .5rem;
+    box-shadow: 0 10px 20px 5px #00000023;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.categories .category:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px 5px #00000040;
+
+}
+
+.category .left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.category .left img {
+    width: 3rem;
+    border-radius: 20px;
+}
+
+.category .content h2 {
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.category .content p {
+    color: rgb(61, 59, 59);
+    font-size: .8rem;
+    opacity: 0.6;
+}
+
+.category .options {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+    background: wheat;
+    border-radius: 50px;
+}
+
+.category:hover .options {
+    opacity: 1;
+    visibility: visible;
+}
+
+.category .toggle-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 2rem;
+    font-size: 1.8rem;
+    opacity: .6;
+}
+
+/* ===TASKS==== */
+.tasks-wrapper {
+    padding: 0 30px;
+    margin-top: 1rem;
+    height: calc(100%);
+    padding-bottom: 20px;
+    overflow: auto;
+
+}
+
+.tasks {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    gap: 1rem;
+
+}
+
+.task-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 20px;
+    margin-top: 1rem;
+    height: calc(100%) -12rem;
+    padding-bottom: 20px;
+    overflow: auto;
+    border-radius: 10px;
+}
+
+.task-wrapper:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px 5px #00000040;
+}
+
+.task {
+    display: flex;
+    align-items: center;
+    font-size: .8rem;
+    font-weight: 500;
+    gap: .5rem;
+    width: max-content;
+    cursor: pointer;
+
+}
+
+.task input {
+    display: none;
+}
+
+.task .checkmark {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 2px;
+    border: 1px solid gray;
+}
+
+.checkmark i {
+    width: 1rem;
+    opacity: 0;
+    transition: all 0.3s;
+
+}
+
+.task:hover .checkmark i {
+    opacity: 1;
+}
+
+
+.task input:checked~.checkmark {
+    background-color: #2c2b2b;
+}
+
+.task input:checked~.checkmark i {
+    opacity: 1;
+    color: #fff;
+}
+
+.task input:checked~p {
+    text-decoration: line-through;
+    opacity: 0.6;
+}
+
+.task-wrapper .delete i {
+    font-size: 1.5rem;
+}
+
+.task-wrapper .delete {
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+}
+
+
+.task-wrapper:hover .delete {
+    visibility: visible;
+    opacity: 1;
+}
+
+.task-wrapper .delete:hover {
+    color: red;
+}
+
+.add-task-btn {
+    padding: .2rem .5rem;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    background-color: aquamarine;
+    font-size: 50px;
+    border-radius: 50%;
+    bottom: 1rem;
+    right: 1rem;
+    transition: all 0.3s;
+}
+
+.add-task-btn.active {
+    z-index: 1;
+    bottom: 20rem;
+    transform: rotate(45deg);
+}
+
+.add-task-btn:hover {
+    background-color: #34a797;
+    color: #fff;
+    transform: scale(1.1);
+
+}
+
+.add-task {
+    position: absolute;
+    bottom: -100%;
+    left: 0;
+    width: 100%;
+    padding: 20px 30px;
+    transition: all 0.3s;
+}
+
+.add-task.active {
+    bottom: 0;
+}
+
+.add-task .heading {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.input-group {
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.input-group input,
+.input-group label {
+    width: 100%;
+    display: block;
+}
+
+.input-group input,
+.input-group select {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 12px;
+}
+
+.input-group label {
+    width: max-content;
+    padding: 10px 0px;
+    margin-bottom: 5px;
+}
+
+.btns {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.btns button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.btns button.add-btn {
+    background-color: aquamarine;
+    color: #000;
+}
+
+.add-task-backdrop {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 135%;
+    height: 20rem;
+    border-radius: 50% 50% 0 0;
+    transform: translate(-50%);
+    background-color: #fff;
+    border: 1px solid;
+}
+
+.black-backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    background-color: #00000023;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+}
+
+.black-backdrop.active {
+    opacity: 1;
+    visibility: visible;
+}
