--- a/style.css
+++ b/style.css
@@ -1,511 +1,514 @@
- @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Noto+Sans+Mono:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
- * {
-     padding: 0;
-     margin: 0;
-     box-sizing: border-box;
-     font-family: "roboto", sans-serif;
-     scroll-behavior: smooth;
- }
-
- ::-webkit-scrollbar {
-     width: 0;
- }
-
- body {
-     display: flex;
-     min-height: 100vh;
-     align-items: center;
-     justify-content: center;
-     background-color: #fff;
-     color: #2e2e2e;
-
- }
-
- .wrapper {
-     display: flex;
-     position: relative;
-     height: 100vh;
-     width: 100%;
-     overflow: hidden;
-     padding: 30px 0;
- }
-
- @media (min-width:768px) {
-     .wrapper {
-         height: 50rem;
-         width: 25rem;
-         border-radius: 40px;
-         border: 10px solid rgb(192, 196, 208);
-     }
-
- }
-
- .wrapper .screen {
-     flex: 1;
-     min-width: 100%;
-     transition: all .3s;
- }
-
- .wrapper.show-category .home-screen {
-     transform: translateY(-100%);
- }
-
- .wrapper.show-category .category-screen {
-     transform: translateY(-100%);
-
- }
-
- .wrapper.show-category .screen-backdrop {
-     transform: translate(-50%, -60%);
-     border: 10px solid rgb(92, 252, 204);
-     background-color: #2df9dd;
- }
-
- .screen-backdrop {
-     width: 135%;
-     height: 25rem;
-     position: absolute;
-     top: 0;
-     left: 50%;
-     z-index: -1;
-     transform: translateX(-50%);
-     border-radius: 0 0 50% 50%;
-     background-color: aquamarine;
-     border: 20px solid rgb(224, 235, 23);
-     transition: all .3s;
-
- }
-
- .head-wrapper {
-     padding: 0 1rem;
-
- }
-
- .menu-btn {
-     display: flex;
-     width: 15%;
-     padding: 5px;
-     align-items: center;
-     justify-content: center;
-     border-radius: 10px;
-     cursor: pointer;
-     font-size: 60px;
-     color: rgb(36, 34, 34);
-     transition: all 0.3s;
- }
-
- .menu-btn:hover {
-     background-color: #34a797;
-     color: #fff;
- }
-
- .menu-btn i:hover {
-     transform: scale(1.1);
- }
-
- .category-screen .head-wrapper {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     padding: 10px 30px;
-
- }
-
- .category-screen .head-wrapper .options {
-     font-size: 40px;
-     padding: 8px;
-     border-radius: .4rem;
-     transition: all .3s;
-
- }
-
- .category-screen .head-wrapper .options:hover {
-     background-color: white;
-
- }
-
- .back-btn {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     font-size: 50px;
-     color: rgb(252, 232, 7);
-     transition: 1s;
-     padding: 10px 30px;
-
- }
-
- .category-screen .head-wrapper .back-btn:hover {
-     border-radius: 2rem;
-     background-color: #fff;
-     color: black;
-     padding: 5px 20px;
- }
-
- .category-details {
-     display: flex;
-     align-items: center;
-     padding: 10px 30px;
-     margin: 10px;
-     gap: 2rem;
-     margin-top: 100px;
-     border-radius: 10px;
-
- }
-
- .category-details img {
-     width: 4rem;
-     border-radius: 50px;
- }
-
-
-
- .welcome {
-     display: flex;
-     justify-content: space-between;
-     margin-top: 2rem;
-     padding: 20px;
- }
-
- .welcome h1 {
-     font-size: 1.5rem;
-     color: rgb(51, 47, 47);
-
- }
-
- .welcome p {
-     color: rgb(72, 66, 66);
-     margin-top: 20px;
-     font-weight: 500;
- }
-
- .welcome .img {
-     position: relative;
- }
-
- .welcome .img img {
-     width: 5rem;
-     border-radius: 50%;
- }
-
- .categories-wrapper {
-     height: calc(100% - 8rem);
-     padding: 0 30px;
-     padding-bottom: 20px;
-     overflow: auto;
-     margin-top: 1rem;
-
- }
-
- .categories {
-     display: flex;
-     flex-direction: column;
-     padding-top: 1rem;
-     gap: 1rem;
- }
-
- .categories .category {
-     display: flex;
-     justify-content: space-between;
-     padding: 1.5rem 1rem;
-     background-color: #fff;
-     border-radius: .5rem;
-     box-shadow: 0 10px 20px 5px #00000023;
-     transition: all .5s;
-     cursor: pointer;
- }
-
- .categories .category:hover {
-     transform: translateY(-5px);
-     box-shadow: 0 10px 20px 5px #00000040;
-
- }
-
- .category .left {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     gap: 1.5rem;
- }
-
- .category .left img {
-     width: 3rem;
-     border-radius: 20px;
- }
-
- .category .content h2 {
-     font-weight: 500;
-     font-size: 32px;
- }
-
- .category .content p {
-     color: rgb(61, 59, 59);
-     font-size: .8rem;
-     opacity: 0.6;
- }
-
- .category .options {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     opacity: 0;
-     visibility: hidden;
-     transition: all 0.3s;
-     background: rgb(246, 243, 243);
-     border-radius: 10px;
- }
-
- .category:hover .options {
-     opacity: 1;
-     visibility: visible;
- }
-
- .category .toggle-btn {
-     cursor: pointer;
-     padding: 0rem .4rem;
-     font-size: 1.8rem;
-     opacity: .8;
-     transform: all .3s;
- }
-
- .category .toggle-btn:hover {
-     color: #04fad9;
- }
-
- /* ===TASKS ==== */
- .tasks-wrapper {
-     padding: 0 30px;
-     margin-top: 1rem;
-     height: calc(100%);
-     padding-bottom: 20px;
-     overflow: auto;
-
- }
-
- .no-task {
-     margin-top: 5rem;
-     text-align: center;
-     font-size: 1.5rem;
-     opacity: .6;
- }
-
- .tasks {
-     display: flex;
-     flex-direction: column;
-     padding-top: 1rem;
-     gap: 1rem;
-
- }
-
- .task-wrapper {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     padding: 15px 20px;
-     margin-top: 1rem;
-     height: calc(100%) - 12rem;
-     padding-bottom: 20px;
-     overflow: auto;
-     border-radius: 10px;
- }
-
- .task-wrapper:hover {
-     transform: translateY(-5px);
-     box-shadow: 0 10px 20px 5px #00000040;
- }
-
- .task {
-     display: flex;
-     align-items: center;
-     font-size: .8rem;
-     font-weight: 500;
-     gap: .5rem;
-     width: max-content;
-     cursor: pointer;
-
- }
-
- .task input {
-     display: none;
- }
-
- .task .checkmark {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     width: 1rem;
-     height: 1rem;
-     border-radius: 2px;
-     border: 1px solid gray;
- }
-
- .checkmark i {
-     width: 1rem;
-     opacity: 0;
-     transition: all 0.3s;
-
- }
-
- .task:hover .checkmark i {
-     opacity: 1;
- }
-
-
- .task input:checked~.checkmark {
-     background-color: #2c2b2b;
- }
-
- .task input:checked~.checkmark i {
-     opacity: 1;
-     color: #fff;
- }
-
- .task input:checked~p {
-     text-decoration: line-through;
-     opacity: 0.6;
- }
-
- .task-wrapper .delete i {
-     font-size: 1.5rem;
- }
-
- .task-wrapper .delete {
-     padding: 10px;
-     border-radius: 10px;
-     cursor: pointer;
-     opacity: 0;
-     visibility: hidden;
-     transition: all 0.3s;
- }
-
-
- .task-wrapper:hover .delete {
-     visibility: visible;
-     opacity: 1;
- }
-
- .task-wrapper .delete:hover {
-     color: red;
- }
-
- .add-task-btn {
-     padding: .2rem .5rem;
-     align-items: center;
-     justify-content: center;
-     position: absolute;
-     background-color: aquamarine;
-     font-size: 50px;
-     border-radius: 50%;
-     bottom: 1rem;
-     right: 1rem;
-     transition: all 0.3s;
- }
-
- .add-task-btn.active {
-     z-index: 1;
-     bottom: 20rem;
-     transform: rotate(45deg);
- }
-
- .add-task-btn:hover {
-     background-color: #34a797;
-     color: #fff;
-     transform: scale(1.1);
-
- }
-
- .add-task {
-     position: absolute;
-     bottom: -100%;
-     left: 0;
-     width: 100%;
-     padding: 20px 30px;
-     transition: all 0.3s;
- }
-
- .add-task.active {
-     bottom: 0;
- }
-
- .add-task .heading {
-     font-size: 1.5rem;
-     margin-bottom: 1rem;
- }
-
- .input-group {
-     position: relative;
-     margin-bottom: 1rem;
- }
-
- .input-group input,
- .input-group label {
-     width: 100%;
-     display: block;
- }
-
- .input-group input,
- .input-group select {
-     width: 100%;
-     border: 1px solid #ccc;
-     border-radius: 10px;
-     padding: 12px;
- }
-
- .input-group label {
-     width: max-content;
-     padding: 10px 0px;
-     margin-bottom: 5px;
- }
-
- .btns {
-     display: flex;
-     gap: 1rem;
-     justify-content: center;
-     align-items: center;
- }
-
- .btns button {
-     padding: 10px 20px;
-     border-radius: 10px;
-     border: none;
-     outline: none;
-     font-weight: 500;
-     cursor: pointer;
-     transition: all 0.3s;
- }
-
- .btns button.add-btn {
-     background-color: aquamarine;
-     color: #000;
- }
-
- .add-task-backdrop {
-     position: absolute;
-     bottom: 0;
-     left: 50%;
-     width: 135%;
-     height: 20rem;
-     border-radius: 50% 50% 0 0;
-     transform: translate(-50%);
-     background-color: #fff;
-     border: 1px solid;
- }
-
- .black-backdrop {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     backdrop-filter: blur(5px);
-     background-color: #00000023;
-     opacity: 0;
-     visibility: hidden;
-     transition: all 0.3s;
- }
-
- .black-backdrop.active {
-     opacity: 1;
-     visibility: visible;
- }
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Noto+Sans+Mono:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "roboto", sans-serif;
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    color: #2e2e2e;
+
+}
+
+.wrapper {
+    display: flex;
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    padding: 30px 0;
+}
+
+@media (min-width:768px) {
+    .wrapper {
+        height: 50rem;
+        width: 25rem;
+        border-radius: 40px;
+        border: 10px solid rgb(192, 196, 208);
+    }
+
+}
+
+.wrapper .screen {
+    flex: 1;
+    min-width: 100%;
+    transition: all .3s;
+}
+
+.wrapper.show-category .home-screen {
+    transform: translateX(-100%);
+}
+
+.wrapper.show-category .category-screen {
+    transform: translateX(-100%);
+
+}
+
+.wrapper.show-category .screen-backdrop {
+    transform: translate(-50%, -60%);
+    border: 10px solid rgb(92, 252, 204);
+    background-color: #2df9dd;
+}
+
+.screen-backdrop {
+    width: 135%;
+    height: 25rem;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: -1;
+    transform: translateX(-50%);
+    border-radius: 0 0 50% 50%;
+    background-color: aquamarine;
+    border: 20px solid rgb(224, 235, 23);
+    transition: all .3s;
+
+}
+
+.head-wrapper {
+    padding: 0 1rem;
+
+}
+
+.menu-btn {
+    display: flex;
+    width: 12%;
+    padding: 4px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 30px;
+    color: rgb(36, 34, 34);
+    transition: all 0.3s;
+}
+
+.menu-btn:hover {
+    background-color: #09dec2;
+    color: #fff;
+}
+
+.menu-btn i:hover {
+    transform: scale(1.1);
+}
+
+.category-screen .head-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
+
+}
+
+.category-screen .head-wrapper .options {
+    font-size: 30px;
+    padding: 4px;
+    border-radius: .4rem;
+    transition: all .3s;
+    text-align: center;
+    align-items: center;
+    display: flex;
+
+}
+
+.category-screen .head-wrapper .options:hover {
+    background-color: white;
+}
+
+.back-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: rgb(252, 232, 7);
+    transition: all 0.5s;
+    padding: 6px 18px;
+
+}
+
+.category-screen .head-wrapper .back-btn:hover {
+    border-radius: 2rem;
+    background-color: #fff;
+    color: black;
+    padding: 5px 16px;
+}
+
+.category-details {
+    display: flex;
+    align-items: center;
+    padding: 10px 30px;
+    margin: 10px;
+    gap: 2rem;
+    margin-top: 100px;
+    border-radius: 10px;
+
+}
+
+.category-details img {
+    width: 4rem;
+    border-radius: 50px;
+}
+
+.welcome {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+    padding: 20px;
+}
+
+.welcome h1 {
+    font-size: 1.5rem;
+    color: rgb(51, 47, 47);
+
+}
+
+.welcome p {
+    color: rgb(72, 66, 66);
+    margin-top: 20px;
+    font-weight: 500;
+}
+
+.welcome .img {
+    position: relative;
+}
+
+.welcome .img img {
+    width: 5rem;
+    border-radius: 50%;
+}
+
+.categories-wrapper {
+    height: calc(100% - 8rem);
+    padding: 0 30px;
+    padding-bottom: 20px;
+    overflow: auto;
+    margin-top: 1rem;
+
+}
+
+.categories {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    gap: 1rem;
+}
+
+.categories .category {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 1rem;
+    background-color: #fff;
+    border-radius: .5rem;
+    box-shadow: 0 10px 20px 5px #00000023;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.categories .category:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px 5px #00000040;
+
+}
+
+.category .left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.category .left img {
+    width: 3rem;
+    border-radius: 20px;
+}
+
+.category .content h2 {
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.category .content p {
+    color: rgb(61, 59, 59);
+    font-size: .8rem;
+    opacity: 0.6;
+}
+
+.category .options {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+    background: rgb(246, 243, 243);
+    border-radius: 10px;
+}
+
+.category:hover .options {
+    opacity: 1;
+    visibility: visible;
+}
+
+.category .toggle-btn {
+    cursor: pointer;
+    padding: 0rem .4rem;
+    font-size: 1.5rem;
+    opacity: .8;
+    transform: all .3s;
+}
+
+.category .toggle-btn:hover {
+    color: #04fad9;
+}
+
+/* ===TASKS ==== */
+.tasks-wrapper {
+    padding: 0 30px;
+    margin-top: 1rem;
+    height: calc(100%);
+    padding-bottom: 20px;
+    overflow: auto;
+
+}
+
+.no-task {
+    margin-top: 5rem;
+    text-align: center;
+    font-size: 1.5rem;
+    opacity: .6;
+}
+
+.tasks {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    gap: 1rem;
+
+}
+
+.task-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 20px;
+    margin-top: 1rem;
+    height: calc(100%) - 12rem;
+    padding-bottom: 20px;
+    overflow: auto;
+    border-radius: 10px;
+}
+
+.task-wrapper:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px 5px #00000040;
+}
+
+.task {
+    display: flex;
+    align-items: center;
+    font-size: .8rem;
+    font-weight: 500;
+    gap: .5rem;
+    width: max-content;
+    cursor: pointer;
+
+}
+
+.task input {
+    display: none;
+}
+
+.task .checkmark {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 2px;
+    border: 1px solid gray;
+}
+
+.checkmark i {
+    width: 1rem;
+    opacity: 0;
+    transition: all 0.3s;
+
+}
+
+.task:hover .checkmark i {
+    opacity: 1;
+}
+
+
+.task input:checked~.checkmark {
+    background-color: #2c2b2b;
+}
+
+.task input:checked~.checkmark i {
+    opacity: 1;
+    color: #fff;
+}
+
+.task input:checked~p {
+    text-decoration: line-through;
+    opacity: 0.6;
+}
+
+.task-wrapper .delete i {
+    font-size: 1.5rem;
+}
+
+.task-wrapper .delete {
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+}
+
+
+.task-wrapper:hover .delete {
+    visibility: visible;
+    opacity: 1;
+}
+
+.task-wrapper .delete:hover {
+    color: red;
+}
+
+/* ===Add Task Btn */
+.add-task-btn {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 6px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: aquamarine;
+    font-size: 30px;
+    border-radius: 50%;
+    transition: all 0.3s;
+    display: flex;
+}
+
+.add-task-btn.active {
+    z-index: 1;
+    bottom: 20rem;
+    transform: rotate(45deg);
+}
+
+.add-task-btn:hover {
+    background-color: #34a797;
+    color: #fff;
+    transform: scale(1.1);
+
+}
+
+.add-task {
+    position: absolute;
+    bottom: -100%;
+    left: 0;
+    width: 100%;
+    padding: 20px 30px;
+    transition: all 0.3s;
+}
+
+.add-task.active {
+    bottom: 0;
+}
+
+.add-task .heading {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.input-group {
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.input-group input,
+.input-group label {
+    width: 100%;
+    display: block;
+}
+
+.input-group input,
+.input-group select {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 12px;
+}
+
+.input-group label {
+    width: max-content;
+    padding: 10px 0px;
+    margin-bottom: 5px;
+}
+
+.btns {
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.btns button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.btns button.add-btn {
+    background-color: aquamarine;
+    color: #000;
+}
+
+.add-task-backdrop {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 135%;
+    height: 20rem;
+    border-radius: 50% 50% 0 0;
+    transform: translateX(-50%);
+    background-color: #fff;
+    border: 1px solid;
+}
+
+.black-backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    background-color: #00000023;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+}
+
+.black-backdrop.active {
+    opacity: 1;
+    visibility: visible;
+}
