--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
 
 .head-wrapper {
     padding: min(10px, 8%) 20px;
+
 }
 
 .menu-btn {
@@ -95,6 +96,7 @@ body {
     font-size: clamp(1rem, calc(7vw + 1rem), 1.5rem);
     color: rgb(36, 34, 34);
     transition: all 0.3s;
+    background-color: #fff;
 
 }
 
@@ -195,8 +197,9 @@ body {
 .welcome h1 {
     font-size: clamp(1.5rem, calc(7vw + 1rem), 1.5rem);
     font-weight: 700;
+    margin-bottom: 10px;
     color: rgb(51, 47, 47);
-
+    text-transform: capitalize;
 }
 
 .welcome p {
@@ -212,6 +215,7 @@ body {
 
 .welcome .img img {
     width: 5rem;
+    height: auto;
     border-radius: 50%;
 }
 
